--- a/src/styles/components/_app.scss
+++ b/src/styles/components/_app.scss
@@ -19,11 +19,8 @@ ul {
 
 .wrapper {
   display: flex;
+  justify-content: center;
   max-width: 100%;
   margin: 0 auto;
   padding: 0 0.5em;
-  @include media(md) {
-    max-width: 90%;
-    display: flex;
-  }
 }
