--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -16,7 +16,7 @@
   transition-duration: 0.3s;
   cursor: pointer; }
 
-.nav__btn::after, .listItem__name::after {
+.nav__btn::after, .item__name::after {
   content: '';
   display: block;
   background-color: #1c1c1c;
@@ -62,13 +62,10 @@ ul {
 
 .wrapper {
   display: flex;
+  justify-content: center;
   max-width: 100%;
   margin: 0 auto;
   padding: 0 0.5em; }
-  @media screen and (min-width: 767px) {
-    .wrapper {
-      max-width: 90%;
-      display: flex; } }
 
 .header {
   background-color: #f4f4f4;
@@ -77,7 +74,8 @@ ul {
   top: 0;
   left: 0;
   right: 0;
-  height: 70px; }
+  height: 70px;
+  border-bottom: 2px solid white; }
   @media screen and (min-width: 1200px) {
     .header {
       height: 100px; } }
@@ -120,16 +118,13 @@ ul {
       display: block;
       font-style: italic; } }
 
-.list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+.main {
   position: relative; }
   @media screen and (min-width: 767px) {
-    .list {
+    .main {
       width: 80%; } }
 
-.slide-in {
+.main--slide-in {
   left: 10em;
   -webkit-animation: slide-in 0.8s forwards;
   animation: slide-in 0.8s forwards; }
@@ -140,7 +135,7 @@ ul {
 @keyframes slide-in {
   100% {
     left: 0; } }
-.slide-out {
+.main--slide-out {
   left: 0;
   -webkit-animation: slide-out 0.8s forwards;
   animation: slide-out 0.8s forwards; }
@@ -151,6 +146,11 @@ ul {
 @keyframes slide-out {
   100% {
     left: 10em; } }
+.list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; }
+
 .nav__overlay--hide, .nav__overlay--show {
   z-index: 400;
   position: fixed;
@@ -160,7 +160,7 @@ ul {
   height: 100%;
   background-color: #1c1c1c; }
 
-.nav__box {
+.nav__box--hide, .nav__box--show, .nav__box--aside {
   background-color: #e7e7e7;
   height: 100%;
   width: 10em;
@@ -169,21 +169,32 @@ ul {
   text-align: center;
   padding-top: 1em; }
   @media screen and (min-width: 767px) {
-    .nav__box {
-      position: static;
-      width: 20%; } }
+    .nav__box--hide, .nav__box--show, .nav__box--aside {
+      position: fixed;
+      background-color: inherit;
+      border-left: 1px solid white; } }
+
+.nav__container {
+  width: 15%; }
 
 .nav__item {
   padding: 1em;
   border-bottom: 1px solid white; }
+  @media screen and (min-width: 767px) {
+    .nav__item {
+      padding: 1.5em; } }
 
 .nav__btn {
   font-size: 1em;
   background-color: #e7e7e7; }
   .nav__btn:hover::after {
     width: 100%; }
+  @media screen and (min-width: 767px) {
+    .nav__btn {
+      background-color: inherit;
+      border: none; } }
 
-/* only for mobile view - nav sliding in and out */
+/* ----- only for mobile view - nav sliding in and out ------ */
 .nav__box--hidden {
   display: none; }
 
@@ -198,7 +209,6 @@ ul {
   opacity: 0.7;
   transition: opacity 0.8s ease-in; }
 
-/* for box */
 .nav__box--hide {
   left: 0;
   -webkit-animation: hide-box 0.5s forwards;
@@ -221,10 +231,14 @@ ul {
 @keyframes show-box {
   100% {
     left: 0; } }
-/* END */
-.listItem {
+/* ----- END ------ */
+/* only for tablet view - nav aside */
+.nav__overlay--aside {
+  display: none; }
+
+.item__container {
   background-color: #fff;
-  max-width: 280px;
+  width: 250px;
   margin: 1em;
   display: flex;
   flex-direction: column;
@@ -234,12 +248,12 @@ ul {
   -webkit-box-shadow: 3px 3px 22px 1px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 3px 3px 22px 1px rgba(0, 0, 0, 0.5);
   box-shadow: 3px 3px 22px 1px rgba(0, 0, 0, 0.5); }
-  .listItem:hover {
+  .item__container:hover {
     transform: scale(1.05); }
-    .listItem:hover .listItem__name::after {
+    .item__container:hover .item__name::after {
       width: 100%; }
 
-.listItem__tagline {
+.item__tagline {
   margin-top: 0; }
 
 /*# sourceMappingURL=main.css.map */
